--- a/.github/workflows/update-deepstate.yml
+++ b/.github/workflows/update-deepstate.yml
@@ -3,7 +3,6 @@ name: Update DeepState GeoJSON (daily)
 on:
   workflow_dispatch:
   schedule:
-    # naponta 03:30 UTC körül (a forrás repo 03:00 UTC körül frissül)
     - cron: "30 3 * * *"
 
 permissions:
@@ -12,10 +11,15 @@ permissions:
 jobs:
   update:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install jq
+        run: |
+          set -euo pipefail
+          sudo apt-get update
+          sudo apt-get install -y jq
 
       - name: Prepare folders
         run: |
@@ -24,44 +28,68 @@ jobs:
       - name: Fetch latest DeepState GeoJSON from cyterat/deepstate-map-data
         env:
           API_URL: https://api.github.com/repos/cyterat/deepstate-map-data/contents/data
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
           echo "Listing: $API_URL"
-          # Lekérjük a data/ mappa tartalmát (JSON), kivesszük a deepstatemap_data_YYYY-MM-DD.geojson fájlokat,
-          # név szerint sorba rendezzük, és a legutolsót választjuk.
-          LATEST_NAME=$(curl -fsSL "$API_URL" \
-            | jq -r '.[].name' \
+
+          # Lekérés auth-tal (rate limit ellen) + alap headerek
+          RESP_HEADERS="$(mktemp)"
+          RESP_BODY="$(mktemp)"
+
+          curl -sS -L \
+            -D "$RESP_HEADERS" \
+            -o "$RESP_BODY" \
+            -H "Accept: application/vnd.github+json" \
+            -H "User-Agent: gh-actions" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            "$API_URL" || true
+
+          echo "== Response status =="
+          head -n 20 "$RESP_HEADERS" || true
+
+          echo "== Body starts (first 300 chars) =="
+          head -c 300 "$RESP_BODY" || true
+          echo ""
+
+          # Ha nem JSON tömb, akkor azonnal megállunk értelmes hibával
+          if ! jq -e 'type=="array"' "$RESP_BODY" >/dev/null 2>&1; then
+            echo "ERROR: A GitHub API nem a várt JSON tömböt adta vissza (lehet 403 rate limit / 404 / egyéb)."
+            exit 1
+          fi
+
+          LATEST_NAME=$(jq -r '.[].name' "$RESP_BODY" \
             | grep -E '^deepstatemap_data_[0-9]{4}-[0-9]{2}-[0-9]{2}\.geojson$' \
             | sort \
             | tail -n 1)
 
           if [ -z "${LATEST_NAME:-}" ]; then
-            echo "ERROR: Nem találtam deepstatemap_data_YYYY-MM-DD.geojson fájlt."
+            echo "ERROR: Nem találtam deepstatemap_data_YYYY-MM-DD.geojson fájlt a listában."
             exit 1
           fi
 
           echo "Latest file: $LATEST_NAME"
 
-          # Letöltési URL kinyerése és a legfrissebb fájl letöltése
-          DOWNLOAD_URL=$(curl -fsSL "$API_URL" | jq -r --arg n "$LATEST_NAME" '.[] | select(.name==$n) | .download_url')
+          DOWNLOAD_URL=$(jq -r --arg n "$LATEST_NAME" '.[] | select(.name==$n) | .download_url' "$RESP_BODY")
 
           if [ -z "${DOWNLOAD_URL:-}" ] || [ "$DOWNLOAD_URL" = "null" ]; then
-            echo "ERROR: Nem találtam download_url-t a kiválasztott fájlhoz."
+            echo "ERROR: Nincs download_url a kiválasztott fájlhoz."
             exit 1
           fi
 
           echo "Download: $DOWNLOAD_URL"
-          curl -fsSL "$DOWNLOAD_URL" -o data/deepstate_latest.geojson
 
-          # Meta infó (opcionális, hasznos)
+          curl -sS -L \
+            -H "User-Agent: gh-actions" \
+            -o data/deepstate_latest.geojson \
+            "$DOWNLOAD_URL"
+
           echo "$LATEST_NAME" > data/deepstate_latest.source.txt
 
       - name: Commit & push if changed
         run: |
           set -euo pipefail
-          git status --porcelain
-
           if [ -n "$(git status --porcelain)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
