--- a/.github/workflows/update-deepstate.yml
+++ b/.github/workflows/update-deepstate.yml
@@ -1,12 +1,16 @@
-name: Update DeepState GeoJSON (daily) + dates index
+name: Update DeepState GeoJSON (daily)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 3 * * *"
+    - cron: "25 3 * * *"  # naponta 03:25 UTC
 
 permissions:
   contents: write
+
+concurrency:
+  group: update-deepstate
+  cancel-in-progress: false
 
 jobs:
   update:
@@ -14,63 +18,119 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install jq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-      - name: Prepare folders
-        run: |
-          mkdir -p data
-
-      - name: Build dates index + download latest
+      - name: Update DeepState data + build dates index
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           set -euo pipefail
+          mkdir -p data
 
-          API="https://api.github.com/repos/cyterat/deepstate-map-data/contents/data"
-          echo "Listing: $API"
+          python - <<'PY'
+          import json, os, re, shutil
+          from datetime import datetime
+          from pathlib import Path
+          import urllib.request
 
-          curl -sS -H "Authorization: Bearer $GH_TOKEN" -H "Accept: application/vnd.github.v3+json" \
-            "$API" > listing.json
+          REPO_API = "https://api.github.com/repos/cytert/deepstate-map-data/contents/data?ref=main"
+          HEADERS = {
+            "User-Agent": "ukraine-war-map-bot",
+            "Accept": "application/vnd.github+json",
+          }
+          token = os.environ.get("GH_TOKEN")
+          if token:
+            HEADERS["Authorization"] = f"Bearer {token}"
 
-          jq -r '.[].name' listing.json | grep -E '^deepstatemap_data_[0-9]{8}\.geojson$' | sort > names.txt
+          def http_get(url: str) -> bytes:
+            req = urllib.request.Request(url, headers=HEADERS)
+            with urllib.request.urlopen(req, timeout=60) as r:
+              return r.read()
 
-          LATEST="$(tail -n 1 names.txt)"
-          echo "Latest: $LATEST"
+          # 1) listázás a cytert/deepstate-map-data repóból
+          raw = http_get(REPO_API)
+          items = json.loads(raw.decode("utf-8"))
 
-          RAW_URL="https://raw.githubusercontent.com/cyterat/deepstate-map-data/main/data/$LATEST"
-          echo "Downloading: $RAW_URL"
+          # olyan fájlokat keresünk, amikben van dátum: deepstate_map_data_YYYYMMDD.geojson
+          pat = re.compile(r"deepstate_map_data_(\d{8})\.geojson$", re.IGNORECASE)
+          candidates = []
+          for it in items:
+            name = it.get("name", "")
+            m = pat.search(name)
+            if not m:
+              continue
+            ymd = m.group(1)
+            try:
+              d = datetime.strptime(ymd, "%Y%m%d").date()
+            except Exception:
+              continue
+            candidates.append((d, name, it.get("download_url")))
 
-          curl -sS "$RAW_URL" -o "data/deepstate_latest.geojson"
+          if not candidates:
+            raise SystemExit("No DeepState geojson candidates found in upstream repo.")
 
-          python3 -c "import json,re; \
-from pathlib import Path; \
-names=Path('names.txt').read_text(encoding='utf-8').splitlines(); \
-out=[]; \
-import datetime; \
-for n in names: \
- m=re.search(r'deepstatemap_data_(\\d{8})\\.geojson',n); \
- if not m: continue; \
- d=m.group(1); \
- out.append({'date':f'{d[0:4]}-{d[4:6]}-{d[6:8]}','name':n,'raw':f'https://raw.githubusercontent.com/cyterat/deepstate-map-data/main/data/{n}'}); \
-Path('data/deepstate_dates.json').write_text(json.dumps(out,ensure_ascii=False,indent=2),encoding='utf-8'); \
-print('Wrote data/deepstate_dates.json items:',len(out))"
+          candidates.sort(key=lambda x: x[0])
+          latest_date, latest_name, latest_url = candidates[-1]
+
+          data_dir = Path("data")
+          latest_local = data_dir / latest_name
+
+          # 2) letöltjük a legújabbat, ha nincs meg
+          if not latest_local.exists():
+            print(f"Downloading latest: {latest_name} ({latest_date})")
+            blob = http_get(latest_url)
+            latest_local.write_bytes(blob)
+          else:
+            print(f"Latest already present: {latest_name}")
+
+          # 3) deepstate_dates.json generálás a helyi data/ mappából
+          local_files = sorted(data_dir.glob("deepstate_map_data_*.geojson"))
+          out = []
+          for p in local_files:
+            m = pat.search(p.name)
+            if not m:
+              continue
+            ymd = m.group(1)
+            d = datetime.strptime(ymd, "%Y%m%d").date()
+            out.append({
+              "date": d.isoformat(),
+              "name": p.name,
+              "raw": f"./data/{p.name}",
+            })
+
+          out.sort(key=lambda x: x["date"])
+
+          (data_dir / "deepstate_dates.json").write_text(
+            json.dumps(out, ensure_ascii=False, indent=2),
+            encoding="utf-8"
+          )
+
+          # 4) deepstate_latest.geojson (könnyű hivatkozás)
+          latest_copy = data_dir / "deepstate_latest.geojson"
+          shutil.copyfile(latest_local, latest_copy)
+
+          print(f"Wrote deepstate_dates.json with {len(out)} entries")
+          print("Done.")
+          PY
 
       - name: Commit & push if changed
         run: |
-          set -e
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          set -euo pipefail
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
 
-          git add -A
+          git add data/deepstate_dates.json data/deepstate_latest.geojson data/deepstate_map_data_*.geojson || true
 
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
           fi
 
-          git commit -m "Update DeepState GeoJSON + dates index"
+          git commit -m "Update DeepState data + dates index"
           git push
