--- a/.github/workflows/daily_summary_and_drones.yml
+++ b/.github/workflows/daily_summary_and_drones.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install requests
+          pip install shapely requests
 
       - name: Prepare folders
         run: |
